data/all_generated_tests/raw_wast_tests/call_MismanagementofBlockNesting_3430.wast
;; 9. **Dynamic Br Table with Mixed Nesting**:    - **Description**: Implement a dynamic `br_table` in a WebAssembly function, causing jumps among deeply nested loops and blocks, with an invalid `call` instruction in one of the potential target blocks.    - **Constraint**: An invalid function index should be used in one of the dynamically reached blocks.    - **Relation to Mismanagement of Block Nesting**: Ensures dynamic jumps through nested blocks properly manage invalid function calls.

(assert_invalid
  (module
    (func $nested-br_table-jump
      (block $outer
        (loop $inner
          (i32.const 0) (i32.const 1)
          (br_table $outer $inner (i32.const 0))
          (block $error
            (call 999)
          )
        )
      )
    )
  )
  "unknown function"
)